--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,22 +1,20 @@
-@import './fonts/fonts.scss';
-@import './constants/null.scss';
-@import './constants/base.scss';
-@import './libs/swiper.scss';
-@import './components/modal.scss';
+@import "./fonts/fonts.scss";
+@import "./constants/null.scss";
+@import "./constants/base.scss";
 
+header,
+footer {
+  width: 100%;
+  height: 80px;
+  background-color: #ccd1d9;
+  font-size: 30px;
 
-header, footer{
-    width: 100%;
-    height: 80px;
-    background-color: #CCD1D9;;
-    font-size: 30px;
+  a {
+    text-decoration: none;
+    color: black;
 
-    a {
-        text-decoration: none;
-        color: black;
-
-        &:hover {
-            text-decoration: underline;
-        }
+    &:hover {
+      text-decoration: underline;
     }
+  }
 }
