--- a/app/scss/fonts/fonts.scss
+++ b/app/scss/fonts/fonts.scss
@@ -1,9 +1,9 @@
-@font-face {
-    font-family: 'Regular';
-    src: url('../../fonts/Roboto-Regular.woff2');
-}
+// @font-face {
+//     font-family: 'Regular';
+//     src: url('../../fonts/Roboto-Regular.woff2');
+// }
 
-@font-face {
-    font-family: 'Bold';
-    src: url('../../fonts/Roboto-Bold.woff2');
-}
+// @font-face {
+//     font-family: 'Bold';
+//     src: url('../../fonts/Roboto-Bold.woff2');
+// }
